[package]
name = "iced_anim"
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/Brady-Simon/iced_anim"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iced.workspace = true
iced_anim_derive = { version = "0.1.0", path = "../animation_builder_derive", optional = true }

[features]
derive = ["iced_anim_derive"]
