[package]
name = "examples"
version = "0.0.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
iced = { workspace = true, features = ["advanced", "debug", "tokio"] }
iced_anim = { version = "0.1.0", path = "../animation_builder", features = ["derive"] }

[[example]]
name = "animated_color"
path = "animated_color.rs"

[[example]]
name = "animated_size"
path = "animated_size.rs"

[[example]]
name = "animated_theme"
path = "animated_theme.rs"

[[example]]
name = "derived_animation"
path = "derived_animation.rs"

[[example]]
name = "animated_bubble"
path = "animated_bubble.rs"

[[example]]
name = "preview_motion"
path = "preview_motion.rs"
